--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -77,7 +77,7 @@ jobs:
           cd pr-checks
           python -m pip install --upgrade pip
           pip install ruamel.yaml==0.17.31
-          python3 sync-back.py
+          python3 sync_back.py
           python3 sync.py
 
       - name: "Merge in progress: Finish merge and push"
