--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -72,12 +72,16 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Generate workflows
+      - name: Sync back version updates to generated workflows
+        working-directory: pr-checks
         run: |
-          cd pr-checks
+          python3 sync_back.py -v
+
+      - name: Generate workflows
+        working-directory: pr-checks
+        run: |
           python -m pip install --upgrade pip
           pip install ruamel.yaml==0.17.31
-          python3 sync_back.py
           python3 sync.py
 
       - name: "Merge in progress: Finish merge and push"
