Fix accidental removal of `- shell: bash` lines

--- a/.github/workflows/__cpp-deptrace-enabled.yml
+++ b/.github/workflows/__cpp-deptrace-enabled.yml
@@ -67,7 +67,7 @@ jobs:
           working-directory: autobuild-dir
         env:
           CODEQL_EXTRACTOR_CPP_AUTOINSTALL_DEPENDENCIES: true
-        run: |
+      - run: |
           if ! ls /usr/bin/errno; then
             echo "Did not autoinstall errno"
             exit 1
