--- a/pr-checks/checks/go-tracing-autobuilder.yml
+++ b/pr-checks/checks/go-tracing-autobuilder.yml
@@ -12,7 +12,7 @@ steps:
       tools: ${{ steps.prepare-test.outputs.tools-url }}
   - uses: ./../action/autobuild
   - uses: ./../action/analyze
-    run: |
+  - run: |
       if [[ "${CODEQL_ACTION_DID_AUTOBUILD_GOLANG}" != true ]]; then
         echo "Expected the Go autobuilder to be run, but the" \
           "CODEQL_ACTION_DID_AUTOBUILD_GOLANG environment variable was not true."
