--- a/pr-checks/checks/go-tracing-legacy-workflow.yml
+++ b/pr-checks/checks/go-tracing-legacy-workflow.yml
@@ -11,7 +11,7 @@ steps:
       languages: go
       tools: ${{ steps.prepare-test.outputs.tools-url }}
   - uses: ./../action/analyze
-    run: |
+  - run: |
       cd "$RUNNER_TEMP/codeql_databases"
       if [[ ! -d go ]]; then
         echo "Did not find a Go database"
