--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -134,6 +134,9 @@ jobs:
         languages: ${{ matrix.language }}
         build-mode: ${{ matrix.build-mode }}
         config: >
+          paths-ignore:
+            - lib
+            - tests
           queries:
             - uses: security-and-quality
     - name: Perform CodeQL Analysis
