Run PR checks over CodeQL v2.22 release series

--- a/.github/workflows/__go-tracing-autobuilder.yml
+++ b/.github/workflows/__go-tracing-autobuilder.yml
@@ -64,6 +64,10 @@ jobs:
           - os: macos-latest
             version: stable-v2.21.4
           - os: ubuntu-latest
+            version: stable-v2.22.4
+          - os: macos-latest
+            version: stable-v2.22.4
+          - os: ubuntu-latest
             version: default
           - os: macos-latest
             version: default
