--- a/.github/workflows/__multi-language-autodetect.yml
+++ b/.github/workflows/__multi-language-autodetect.yml
@@ -64,6 +64,10 @@ jobs:
           - os: ubuntu-latest
             version: stable-v2.21.4
           - os: macos-latest
+            version: stable-v2.22.4
+          - os: ubuntu-latest
+            version: stable-v2.22.4
+          - os: macos-latest
             version: default
           - os: ubuntu-latest
             version: default
