--- a/pr-checks/checks/upload-quality-sarif.yml
+++ b/pr-checks/checks/upload-quality-sarif.yml
@@ -6,7 +6,7 @@ steps:
   - uses: ./../action/init
     with:
       tools: ${{ steps.prepare-test.outputs.tools-url }}
-      languages: cpp,csharp,java,javascript,python
+      languages: csharp,java,javascript,python
       analysis-kinds: code-quality
   - name: Build code
     run: ./build.sh
