--- a/.github/workflows/__all.yml
+++ b/.github/workflows/__all.yml
@@ -23,6 +23,18 @@ on:
         description: The version of Java to install
         required: false
         default: '17'
+  workflow_call:
+    inputs:
+      go-version:
+        type: string
+        description: The version of Go to install
+        required: false
+        default: '>=1.21.0'
+      java-version:
+        type: string
+        description: The version of Java to install
+        required: false
+        default: '17'
 jobs:
   all-platform-bundle:
     name: All-platform bundle
