Trigger sync back script automatically

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -23,6 +23,8 @@ updates:
     directory: "/"
     schedule:
       interval: weekly
+    labels:
+      - Rebuild
     groups:
       actions:
         patterns:
