--- a/pr-checks/checks/build-mode-autobuild.yml
+++ b/pr-checks/checks/build-mode-autobuild.yml
@@ -1,6 +1,8 @@
 name: "Build mode autobuild"
 description: "An end-to-end integration test of a Java repository built using 'build-mode: autobuild'"
-versions: ["nightly-latest"]
+operatingSystems: ["ubuntu", "windows"]
+versions: ["linked", "nightly-latest"]
+installJava: "true"
 steps:
   - name: Set up Java test repo configuration
     run: |
@@ -22,6 +24,14 @@ steps:
       build_mode=$(yq eval '.buildMode' "$metadata_path")
       if [[ "$build_mode" != "autobuild" ]]; then
         echo "Expected build mode to be 'autobuild' but was $build_mode"
+        exit 1
+      fi
+
+  - name: Check that indirect tracing is disabled
+    run: |
+      if [[ ! -z "${CODEQL_RUNNER}" ]]; then
+        echo "Expected indirect tracing to be disabled, but the" \
+          "CODEQL_RUNNER environment variable is set."
         exit 1
       fi
 
