--- a/.github/workflows/__config-export.yml
+++ b/.github/workflows/__config-export.yml
@@ -49,6 +49,7 @@ jobs:
           - os: windows-latest
             version: nightly-latest
     name: Config export
+    if: github.triggering_actor != 'dependabot[bot]'
     permissions:
       contents: read
       security-events: read
