--- a/.github/workflows/__ruby.yml
+++ b/.github/workflows/__ruby.yml
@@ -49,6 +49,7 @@ jobs:
           - os: macos-latest
             version: nightly-latest
     name: Ruby analysis
+    if: github.triggering_actor != 'dependabot[bot]'
     permissions:
       contents: read
       security-events: read
