--- a/.github/workflows/__rust.yml
+++ b/.github/workflows/__rust.yml
@@ -47,6 +47,7 @@ jobs:
           - os: ubuntu-latest
             version: nightly-latest
     name: Rust analysis
+    if: github.triggering_actor != 'dependabot[bot]'
     permissions:
       contents: read
       security-events: read
