Exclude transpiled code and dependencies from VSCode search

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,11 @@
     "build": true,
     "lib": true,
   },
+  "search.exclude": {
+    "**/node_modules": true,
+    "build": true,
+    "lib": true,
+  },
   // Installing a new Node package often triggers VS Code's git limit warnings as there is typically
   // an intermediate stage where many files are modified. This setting suppresses these warnings.
   "git.ignoreLimitWarning": true,
