Run more checks in `unit-tests` job, even when previous checks failed

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -55,17 +55,20 @@ jobs:
         run: .github/workflows/script/check-js.sh
 
       - name: Verify PR checks up to date
+        if: always()
         run: .github/workflows/script/verify-pr-checks.sh
 
       - name: Run unit tests
+        if: always()
         run: npm test
 
       - name: Run pr-checks tests
+        if: always()
         working-directory: pr-checks
         run: python -m unittest discover
 
       - name: Lint
-        if: matrix.os != 'windows-latest'
+        if: always() && matrix.os != 'windows-latest'
         run: npm run lint-ci
 
       - name: Upload sarif
